# Token2022-Hook-AMM

./: .gitignore  Anchor.toml  Cargo.toml  DEPLOYMENT_GUIDE.md  README.md  deploy.sh  initialize_hook.js
hook/: Anchor.toml  Cargo.toml  tsconfig.json
hook/migrations/: deploy.ts
hook/programs/hook/: Cargo.toml
hook/programs/hook/src/: lib.rs
hook/tests/: hook.ts
hookswap/: .gitignore  README.md  next.config.js  package-lock.json  package.json  tailwind.config.js
hookswap/app/: globals.css  layout.tsx  page.tsx
hookswap/components/: AddLiquidity.tsx  ClientProviders.tsx  ClientWrapper.tsx  CreatePool.tsx  MintHookToken.tsx  Swap.tsx  WalletButton.tsx  WalletProviderWrapper.tsx
hookswap/components/hook/: CreateHookedToken.tsx
hookswap/components/layout/: Header.tsx  Navigation.tsx
hookswap/components/pool/: AddLiquidityForm.tsx  CreatePool.tsx  PoolCard.tsx  PoolStats.tsx  RemoveLiquidityForm.tsx
hookswap/components/swap/: SwapCard.tsx  SwapInput.tsx  SwapStats.tsx  TokenSelector.tsx
hookswap/components/wallet/: WalletButton.tsx  WalletProvider.tsx
hookswap/context/: WalletProvider.tsx
hookswap/hooks/: useAnchorPrograms.ts  usePool.ts  usePoolData.ts  useSwap.ts  useTokens.ts  useWalletEvents.ts  useWalletHandlers.ts
hookswap/idl/: amm.json  hook.json
hookswap/lib/: anchor.ts  solana.ts
hookswap/pages/: _app.tsx
hookswap/types/: common.ts  hook.ts  index.ts  pool.ts  swap.ts  token.ts  wallet.ts
programs/: tsconfig.json
programs/amm/: Anchor.toml  Cargo.toml
programs/amm/tests/: amm.ts
programs/tests/: amm.ts
(+4 files in other folders)
