# This directory contains the Hook Anchor project  
# The actual program is in programs/hook/

[workspace]
members = ["programs/hook"]
resolver = "2"

[profile.release]
overflow-checks = true
lto = "fat"
codegen-units = 1

[profile.release.build-override]
opt-level = 3
incremental = false
codegen-units = 1
